# demo-observe-rs

./: .env  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
src/server/: main.rs  otel.rs  settings.rs
src/simple/: main.rs
