[package]
name = "demo-observe-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4.22"
tokio = {  version = "1", features = ["full"] }
opentelemetry_sdk = {  version = "0.25", features = ["rt-tokio"] }
opentelemetry-otlp = {  version = "0.25" }
opentelemetry-appender-log = { version = "0.25" }
