[package]
name = "demo-observe-rs"
version = "0.1.0"
edition = "2021"
default-run = "server"

[[bin]]
name = "simple"
path = "src/simple/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
anyhow = "1"
log = "0.4.22"
tokio = {  version = "1", features = ["full"] }
opentelemetry = "0.25"
opentelemetry_sdk = {  version = "0.25", features = ["rt-tokio"] }
opentelemetry-otlp = {  version = "0.25" }
opentelemetry-appender-log = { version = "0.25" }
opentelemetry-http = { version = "0.25" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = { version = "0.26" }
axum = "0.7"
tower-http = {  version = "0.6", features = ["trace", "propagate-header"] }
http = "1.1.0"

reqwest = { version = "0.12", features = ["rustls-tls"] }
reqwest-middleware = "0.3"
reqwest-tracing = "0.5"

